--- a/package.json
+++ b/package.json
@@ -24,14 +24,15 @@
   "author": "Lorenzo Mangani",
   "license": "MIT",
   "dependencies": {
-    "pino": "^7.1.0",
+    "pino": "^8.4.2",
     "pino-loki-transport": "0.8.6",
     "@actions/core": "^1.6.0",
     "@actions/http-client": "^1.0.8"
   },
   "devDependencies": {
+    "@tsconfig/node16": "^1.0.3",
+    "@types/node": "^18.7.6",
     "@types/jest": "^27.0.2",
-    "@types/node": "^16.11.51",
     "@types/split2": "^3.2.1",
     "@vercel/ncc": "^0.31.1",
     "eslint-plugin-github": "^4.3.7",
