--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "format-check": "prettier --check **/*.ts",
     "package": "ncc build --source-map --license licenses.txt",
     "test": "jest",
-    "all": "yarn run build && yarn run format && yarn run package"
+    "all": "npm run build && npm run format && npm run package"
   },
   "repository": {
     "type": "git",
@@ -27,12 +27,14 @@
     "@actions/core": "^1.6.0",
     "@actions/http-client": "^1.0.8",
     "pino": "^8.4.2",
-    "pino-loki-transport": "^0.8.6"
+    "pino-abstract-transport": "^1.0.0",
+    "pino-loki-transport": "^0.8.6",
+    "transport-stream": "^1.4.7"
   },
   "devDependencies": {
     "@tsconfig/node16": "^1.0.3",
-    "@types/node": "^18.7.6",
     "@types/jest": "^27.0.2",
+    "@types/node": "^18.7.6",
     "@types/split2": "^3.2.1",
     "@vercel/ncc": "^0.31.1",
     "eslint-plugin-github": "^4.3.7",
