--- a/tsconfig.json
+++ b/tsconfig.json
@@ -7,6 +7,8 @@
     "strict": true,                           /* Enable all strict type-checking options. */
     "noImplicitAny": true,                    /* Raise error on expressions and declarations with an implied 'any' type. */
     "esModuleInterop": true,                  /* Enables emit interoperability between CommonJS and ES Modules via creation of namespace objects for all imports. Implies 'allowSyntheticDefaultImports'. */
+    "allowJs": true,
  },
-  "exclude": ["node_modules", "**/*.test.ts"]
+  "files": [ "src/github.ts", "src/main.ts", "src/run.ts", "src/pinoLoki.js" ],
+  "exclude": ["node_modules", "**/*.test.ts", "./lib/*.js", "jest*.js", "__tests__" ],
 }
